--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ p {
     color: var(--corLetra);
     text-align: justify;
     text-indent: 15px;
-    line-height: 0.9em;
+    line-height: 1.1em;
     padding: 5px 5px 5px 5px;
     font-size: 18px;
 }
@@ -41,6 +41,23 @@ h1 {
     color: var(--corLetra);
     background-color: var(--corFundoCaixas);
     margin-bottom: 10px;
+}
+
+h2{
+    text-indent: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;    
+}
+
+h3{
+    text-indent: 45px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+ul{
+    list-style: none;
+    color: var(--corLetra);
 }
 
 a {
@@ -68,16 +85,19 @@ audio {
 .video {
     width: 450px;
     margin: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
     border: 1px solid var(--corPreta);      
 }
 
 nav {
     width: 1200px;
     margin: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
     height: 40px; 
     background-color: var(--corFundoCaixas);
     border: solid;
-    margin-bottom: 15px;
 }
 
 nav > ul {
@@ -93,11 +113,10 @@ nav > ul > li {
     text-align: center;
     font-size: 20px;
     list-style: none;
-    padding: 3px 40px 3px 40px;
+    padding: 9px 40px 0px 40px;
 }
 
 nav > ul > li:hover {
-    background-color: var(--corFundoCaixas);
     display: block;
 }
   
