--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ h1 {
 }
 
 h2{
+    color: var(--corLetra);
     text-indent: 20px;
     margin-top: 5px;
     margin-bottom: 5px;    
@@ -90,6 +91,14 @@ audio {
     border: 1px solid var(--corPreta);      
 }
 
+.videoYoutube{
+    width: 560px;
+    margin: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border: 1px solid var(--corPreta);   
+}
+
 nav {
     width: 1200px;
     margin: auto;
@@ -111,7 +120,7 @@ nav > ul > li {
     width: 160px;
     height: 34px;
     text-align: center;
-    font-size: 20px;
+    font-size: 16px;
     list-style: none;
     padding: 9px 40px 0px 40px;
 }
