--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 main {
     width: 1000px;
     margin: auto;
+    margin-bottom: 20px;
     border: 3px solid var(--corPreta);
     padding: 15px;
     background-color: var(--corFundo);
